--- a/ui-ngx/src/theme.scss
+++ b/ui-ngx/src/theme.scss
@@ -24,7 +24,7 @@
 $tb-mat-indigo: (
   50: #e8eaf6,
   100: #c5cae9,
-  200: #9fa8da,
+  200: #9cd1cd,
   300: #7986cb,
   400: #5c6bc0,
   500: $tb-primary-color,
@@ -83,7 +83,7 @@ $accent: mat.m2-get-color-from-palette($tb-accent);
 $tb-dark-mat-indigo: (
   50: #e8eaf6,
   100: #c5cae9,
-  200: #9fa8da,
+  200: #9cd1cd,
   300: #7986cb,
   400: #5c6bc0,
   500: $tb-dark-primary-color,
